# libracing

./: .gitignore  CMakeLists.txt  Makefile  README.md
ac/: ac.c  ac.h
examples/: CMakeLists.txt  ac.c  acc.c  assetto_corsa.c  iracing.c
include/libracing/: ac.h  acc.h  ace.h  iracing.h  lemans.h  types.h  udp_socket.h
iracing/: iracing.c  iracing.h
src/: ac.c  acc.c  iracing.c  udp_socket.c
src/ac/: client.c
src/acc/: client.c  reader.c  types.c  writer.c
src/iracing/: client.c  types.c  utils.c
src/utils/: types.c  udp_socket.c  wsa_client.c
